--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "deploy": "gh-pages -d public",
     "start": "serve ./public"
   },
   "repository": {
@@ -16,11 +17,12 @@
   "bugs": {
     "url": "https://github.com/Sayan-dev/Sayan-dev.github.io/issues"
   },
-  "homepage": "https://github.com/Sayan-dev/Sayan-dev.github.io#readme",
+  "homepage": "https://sayan-dev.github.io/",
   "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "serve": "^12.0.0",
     "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "serve": "^12.0.0"
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
