--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,9 +16,5 @@ jobs:
       with:
         node-version: '12.x'
     - run: yarn
-    - run: yarn run build
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+    - run: yarn build
+    - run: yarn deploy 
